# zoom

./: .gitignore  .gitmodules  ChangeLog  Glulxe-Info.plist  Info-ZoomView__Upgraded_.plist  Info-Zoom__Upgraded_.plist  LeopardExtns-Info.plist  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  Zoom-todo.oo3  Zoom-todo.ooutline  ZoomMetadataImporter-Info.plist  ZoomPlugIns-Info.plist  ZoomSaveQuickLook-Info.plist  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  doh.txt  zoom-alpha.patch  zoom-collin2.patch  zoomrc
Project builder/: build_files.sh
ProjectBuilder/: build_files.sh  config.h
ProjectBuilder/etc/: ztypes.h
Zoom.pbproj/: ahunter.pbxuser  project.pbxproj
ZoomCocoa.pbproj/: ahunter.pbxuser  project.pbxproj
ZoomCocoa.xcode/: ahunter.pbxuser  project.pbxproj
ZoomCocoa.xcodeproj/: ahunter.mode1  ahunter.pbxuser  project.pbxproj
blorb/libblorb/: blorb.h  makeblorb.c
bonus/: Makefile.am  Makefile.in  misc.h  random.inf  spec11.h  v6tests.h  zmark.inf  ztest.inf
bonus/docs/: IF_XML_metadata.tex
builder/: Makefile.am  Makefile.in  gram.c  gram.h  gram.y  lex.c  lex.l  main.c  operation.h
distribution/Zoom Distribution.fsproj/: project.plist
m4/: Makefile.am  Makefile.in  carbon.m4  display.m4  util.m4
manual/: Makefile.am  Zoom Help idx  configXwin.html  configmac.html  idx  index.html  troubleshooting.html  zoom.html  ztitle.html
src/: Makefile.am  Makefile.in  archive.iFiction  blorb.c  blorb.h  carbondisplay.c  carbondisplay.h  carbonfont.c  carbonprefs.c  carbonsupport.c  cocoadisplay.m  debug.c  debug.h  display.c  display.h  eval.y  file.c  file.h  font3.c  font3.h  format.c  format.h  hash.c  hash.h  iff.c  ifmbtest.c  ifmetabase-internal.h  ifmetabase.c  ifmetabase.h  ifmetadata.c  ifmetadata.h  ifmetaxml.c  ifmetaxml.h  image.h  image_carbon.c  image_libpng.c  image_none.c  image_ximage.c  image_ximage.h  infocom.iFiction  (+45 more)
src/macos/: Info.plist  macreadme.rtf  zoom-app.icns  zoom-file.icns  zoom-game.icns  zoomrc
src/macos/zoom.nib/: info.nib  objects.xib
src/zoomCocoa/: Blorb.icns  GameInfo.xib  GlkClient.icns  HUGO.icns  MainMenu.xib  NoteWindow.xib  PluginManager.xib  Preferences.xib  Skein.xib  TADS.icns  Z6Display.m  ZDisplay.m  ZFiles.m  ZoomAppDelegate.h  ZoomAppDelegate.m  ZoomClient.h  ZoomClient.m  ZoomClient.xib  ZoomClientController.h  ZoomClientController.m  ZoomCollapsableView.h  ZoomCollapsableView.m  ZoomConnector.m  ZoomCursor.m  ZoomDownloadView.m  ZoomFadeView.m  ZoomFlipView.h  ZoomFlipView.m  ZoomGameInfoController.h  ZoomGameInfoController.m  ZoomHQImageView.m  ZoomInputLine.h  ZoomInputLine.m  ZoomLowerWindow.h  ZoomLowerWindow.m  ZoomMetadata.h  ZoomMetadata.m  ZoomMoreView.h  ZoomMoreView.m  ZoomNotesController.m  (+46 more)
src/zoomCocoa/English.lproj/: Credits.rtf  ifdb-failed.html
src/zoomCocoa/GameInfo.nib/: classes.nib  designable.nib  info.nib  keyedobjects.nib  objects.nib
src/zoomCocoa/Leopard/: GeneratePreviewForURL.m  ZoomLFlipView.m  ZoomLeopard.h  ZoomLeopard.m  ZoomSaveQuickLook.c
src/zoomCocoa/MainMenu.nib/: classes.nib  designable.nib  info.nib  keyedobjects.nib  objects.nib
src/zoomCocoa/NoteWindow.nib/: classes.nib  info.nib  keyedobjects.nib
src/zoomCocoa/PlugIns/: ZoomBabel.h  ZoomBabel.m  ZoomDownload.h  ZoomDownload.m  ZoomGlkDocument.h  ZoomGlkDocument.m  ZoomGlkPlugIn.h  ZoomGlkPlugIn.m  ZoomGlkSaveRef.h  ZoomGlkSaveRef.m  ZoomGlkWindowController.h  ZoomGlkWindowController.m  ZoomGlulxe.m  ZoomPlugIn.h  ZoomPlugIn.m  ZoomPlugInCell.m  ZoomPlugInController.h  ZoomPlugInController.m  ZoomPlugInInfo.h  ZoomPlugInInfo.m  ZoomPlugInManager.h  ZoomPlugInManager.m  ZoomSignPost.h  ZoomSignPost.m
src/zoomCocoa/PlugIns/English.lproj/: GlkWindow.xib
src/zoomCocoa/PlugIns/English.lproj/GlkWindow.nib/: classes.nib  info.nib  keyedobjects.nib  objects.nib
src/zoomCocoa/PluginManager.nib/: classes.nib  info.nib  keyedobjects.nib
src/zoomCocoa/Preferences.nib/: classes.nib  designable.nib  info.nib  keyedobjects.nib  objects.nib
src/zoomCocoa/Resources/: ZoomBlorbFile.h  ZoomBlorbFile.m  ZoomResourceDrop.h  ZoomResourceDrop.m
src/zoomCocoa/Skein/: ZoomSkein.h  ZoomSkein.m  ZoomSkeinController.m  ZoomSkeinItem.h  ZoomSkeinItem.m  ZoomSkeinLayout.h  ZoomSkeinLayout.m  ZoomSkeinLayoutItem.h  ZoomSkeinLayoutItem.m  ZoomSkeinView.h  ZoomSkeinView.m  ZoomSkeinXML.m
src/zoomCocoa/Skein.nib/: classes.nib  info.nib  keyedobjects.nib  objects.nib
src/zoomCocoa/Spotlight/: MetadataImporter.m
src/zoomCocoa/ZoomClient.nib/: info.nib  keyedobjects.nib  objects.nib
src/zoomCocoa/iFiction-10.2.nib/: classes.nib  designable.nib  info.nib  keyedobjects.nib  objects.nib
src/zoomCocoa/iFiction.nib/: classes.nib  designable.nib  info.nib  keyedobjects.nib  objects.nib
